// Copyright 2018 The OpenPitrix Authors. All rights reserved.
// Use of this source code is governed by a Apache license
// that can be found in the LICENSE file.

syntax = "proto3";

package metadata.types;

option go_package = "openpitrix.io/openpitrix/pkg/pb/metadata/types;pbtypes";

message Empty {
	// empty
}

message Bool {
	bool value = 1;
}
message BoolList {
	repeated bool value_list = 1;
}

message Int32 {
	int32 value = 1;
}
message Int32List {
	repeated int32 value_list = 1;
}

message UInt32 {
	uint32 value = 1;
}
message UInt32List {
	repeated uint32 value_list = 1;
}

message Int64 {
	int64 value = 1;
}
message Int64List {
	repeated int64 value_list = 1;
}

message UInt64 {
	uint64 value = 1;
}
message UInt64List {
	repeated uint64 value_list = 1;
}

message Float32 {
	float value = 1;
}
message Float32List {
	repeated float value_list = 1;
}

message Float64 {
	double value = 1;
}
message Float64List {
	repeated double value_list = 1;
}

message String {
	string value = 1;
}
message StringList {
	repeated string value_list = 1;
}
message StringMap {
	map<string, string> value_map = 1;
}
message StringListMap {
	map<string, StringList> value_list_map = 1;
}

message Bytes {
	bytes value = 1;
}
message BytesList {
	repeated bytes value_list = 1;
}
message BytesMap {
	map<string, bytes> value_map = 1;
}
message BytesListMap {
	map<string, BytesList> value_list_map = 1;
}

message Version {
	string short_version = 1;
	string git_sha1_version = 2;
	string build_date = 3;
}
